# pelikan

./: Cargo.toml
config/: blabber.toml  pingserver.toml  segcache.toml  twemcache-tls.toml  twemcache.toml
src/common/src/: expiry.rs  lib.rs
src/config/src/: debug.rs
src/core/admin/src/: lib.rs
src/core/proxy/src/: backend.rs  frontend.rs  lib.rs
src/core/server/: Cargo.toml
src/core/server/src/: lib.rs
src/core/server/src/workers/: mod.rs  multi.rs  storage.rs
src/entrystore/src/: lib.rs  util.rs
src/entrystore/src/seg/: resp.rs
src/entrystore/src/segcache/: memcache.rs
src/protocol/admin/src/: admin.rs
src/protocol/memcache/src/: compose_context.rs  lib.rs  util.rs
src/protocol/memcache/src/binary/response/: get.rs
src/protocol/memcache/src/request/: add.rs  append.rs  cas.rs  get.rs  mod.rs  prepend.rs  replace.rs  set.rs
src/protocol/memcache/src/response/: mod.rs  numeric.rs  values.rs
src/protocol/memcache/src/text/response/: get.rs  replace.rs  set.rs
src/protocol/resp/src/: lib.rs
src/protocol/resp/src/message/: bulk_string.rs  mod.rs
src/protocol/resp/src/request/: get.rs  mod.rs  set.rs
src/proxy/momento/src/: admin.rs  main.rs
src/proxy/ping/src/: main.rs
src/proxy/thrift/src/: main.rs
src/rust-util/pelikan-sys/: build.rs
src/rust-util/pelikan-sys/src/: lib.rs
src/rust/config/: Cargo.toml
src/rust/config/src/: admin.rs  array.rs  buf.rs  dbuf.rs  debug.rs  lib.rs  pingserver.rs  seg_cache.rs  server.rs  sockio.rs  stats_log.rs  tcp.rs  time.rs  twemcache.rs  worker.rs
src/rust/metrics/: Cargo.toml
src/rust/metrics/src/: lib.rs
src/server/blabber/: Cargo.toml
src/server/blabber/src/: config.rs  listener.rs  main.rs  message.rs  publisher.rs  worker.rs
src/server/pingserver/: Cargo.toml
src/server/pingserver-mio-rs/: Cargo.toml  client.crt  client.key  combined.crt  server.crt  server.key  serverca.crt
src/server/pingserver-mio-rs/src/: buffer.rs  config.rs  listener.rs  main.rs  session.rs  worker.rs
src/server/pingserver-rs/: Cargo.toml
src/server/pingserver-rs/src/: listener.rs  logger.rs  main.rs  session.rs  worker.rs
src/server/pingserver/src/: main.rs
src/server/rds/src/: main.rs
src/server/rds/tests/: common.rs
src/server/segcache/src/: main.rs
src/server/segcache_tokio/: Cargo.toml
src/server/segcache_tokio/src/: main.rs
src/server/tokio-pingserver/: Cargo.toml
src/server/tokio-pingserver/src/: config.rs  main.rs
src/server/tokio-pingserver/src/tokio/: ascii.rs  grpc.rs  http2.rs  http3.rs  mod.rs
src/server/twemcache-http/src/: admin.rs
src/server/twemcache-rs/: Cargo.toml
src/server/twemcache-rs/benches/: benchmark.rs
src/server/twemcache-rs/src/: admin.rs  event_loop.rs  lib.rs  main.rs  metrics.rs  server.rs  session.rs  worker.rs
src/server/twemcache-rs/src/protocol/: data.rs
src/server/twemcache-rs/src/storage/: mod.rs
src/server/twemcache-rs/tests/: integration.rs
src/session/src/: lib.rs
src/storage/cdb/cdb_rs/: build.rs
src/storage/cdb/cdb_rs/src/cdb/ffi/: gen.rs  mod.rs
src/storage/datatier/src/: lib.rs
src/storage/seg/src/: lib.rs
src/storage/seg/src/segments/: segments.rs
src/storage/seg/src/ttl_buckets/: ttl_buckets.rs
src/storage/segcache/: Cargo.toml
src/storage/segcache/benches/: benchmark.rs
src/storage/segcache/examples/: benchmark.rs
src/storage/segcache/src/: item.rs  lib.rs  rand.rs  ttl_buckets.rs
src/storage/segcache/src/common/: mod.rs
src/storage/segcache/src/hashtable/: mod.rs
src/storage/segcache/src/item/: header.rs  mod.rs  raw.rs  reserved.rs
src/storage/segcache/src/segments/: eviction.rs  header.rs  mod.rs  segment.rs  segments.rs
src/storage/segcache/src/segments/segment/: mod.rs
src/storage/segcache/src/ttl_buckets/: constants.rs  error.rs  mod.rs
src/storage/segcache/tests/: integration_basic.rs
src/switchboard/: Cargo.toml
src/switchboard/src/: lib.rs
