[package]
name = "blabber"
description = "a simple server for sending nonsense to clients"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
ahash = { workspace = true }
broadcaster = { git = "https://github.com/brayniac/broadcaster" }
clap = { version = "4.4.7", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
