[package]
name = "blabber"
description = "a simple server for sending nonsense to clients"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
ahash = { workspace = true }
backtrace = { workspace = true }
broadcaster = { git = "https://github.com/brayniac/broadcaster" }
clap = { version = "4.4.7", features = ["derive"] }
logger = { path = "../../logger" }
rand = { workspace = true, features = ["small_rng"] }
serde = { workspace = true, features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
toml = { workspace = true }
