[package]
name = "blabber"
description = "a simple server for sending nonsense to clients"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
ahash = { workspace = true }
backtrace = { workspace = true }
broadcaster = { git = "https://github.com/brayniac/broadcaster" }
clap = { version = "4.4.7", features = ["derive"] }
config = { path = "../../config" }
logger = { path = "../../logger" }
rand = { workspace = true, features = ["small_rng"] }
rand_distr = "*"
serde = { workspace = true, features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
toml = { workspace = true }
