[package]
name = "pingserver-mio-rs"
version = "0.1.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
ccommon-rs = { path = "../../../deps/ccommon/rust/ccommon-rs" }
log = "0.4.8"
mio = "0.6.21"
slab = "0.4.2"
