[package]
name = "tokio-pingserver"
build = "build.rs"

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
backtrace = { workspace = true }
clap = { workspace = true }
common = { path = "../../common" }
config = { path = "../../config" }
entrystore = { path = "../../entrystore" }
humantime = "2.1.0"
logger = { path = "../../logger" }
metriken = { workspace = true }
prost = "0.12"
protocol-ping = { path = "../../protocol/ping", features = ["server"] }
serde = { workspace = true, features = ["derive"] }
server = { path = "../../core/server" }
session = { path = "../../session" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = { workspace = true }
tonic = { version = "0.11", features = ["prost"] }
warp = "0.3.6"

[build-dependencies]
tonic-build = "0.11"
